// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      style="height: 100vh; max-height: 300px; display: flex; flex-direction: column; margin-inline: 24px;"
    >
      <form
        class="rcx-box rcx-box--full rcx-css-tma6gt"
      >
        <label
          class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
        >
          <input
            class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box rcx-css-ue04py"
            placeholder="Search..."
            size="1"
            type="text"
          />
          <span
            class="rcx-box rcx-box--full rcx-input-box__addon"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
            >
              
            </i>
          </span>
        </label>
      </form>
      <div
        class="rcx-box rcx-box--full rcx-css-qcmk2x"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-pln26h rcx-css-1ichk9z"
          data-overlayscrollbars="host"
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-padding=""
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
          >
            <div
              class=""
              data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
              style="padding: 0px 0px 0px 0px;"
              tabindex="-1"
            >
              <div
                class="rcx-box rcx-box--full rcx-table__wrapper"
              >
                <table
                  class="rcx-box rcx-box--full rcx-table--sticky rcx-table--fixed rcx-table"
                >
                  <thead
                    class="rcx-box rcx-box--full rcx-table__head"
                  >
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <th
                        class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-127j9mz"
                          wrap="no-wrap"
                        >
                          Name
                        </div>
                      </th>
                      <th
                        class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-127j9mz"
                          wrap="no-wrap"
                        >
                          Email
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="rcx-box rcx-box--full rcx-table__body"
                  >
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #0
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n0@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #1
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n1@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #2
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n2@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #3
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n3@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #4
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n4@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #5
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n5@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #6
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n6@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #7
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n7@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #8
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n8@example.com
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        John Doe #9
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        john.doe.n9@example.com
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders Loading without crashing 1`] = `
<body>
  <div>
    <div
      style="height: 100vh; max-height: 300px; display: flex; flex-direction: column; margin-inline: 24px;"
    >
      <form
        class="rcx-box rcx-box--full rcx-css-tma6gt"
      >
        <label
          class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
        >
          <input
            class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box rcx-css-ue04py"
            placeholder="Search..."
            size="1"
            type="text"
          />
          <span
            class="rcx-box rcx-box--full rcx-input-box__addon"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
            >
              
            </i>
          </span>
        </label>
      </form>
      <div
        class="rcx-box rcx-box--full rcx-css-qcmk2x"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-pln26h rcx-css-1ichk9z"
          data-overlayscrollbars="host"
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-padding=""
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
          >
            <div
              class=""
              data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
              style="padding: 0px 0px 0px 0px;"
              tabindex="-1"
            >
              <div
                class="rcx-box rcx-box--full rcx-table__wrapper"
              >
                <table
                  class="rcx-box rcx-box--full rcx-table--sticky rcx-table--fixed rcx-table"
                >
                  <thead
                    class="rcx-box rcx-box--full rcx-table__head"
                  >
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <th
                        class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-127j9mz"
                          wrap="no-wrap"
                        >
                          Name
                        </div>
                      </th>
                      <th
                        class="rcx-box rcx-box--full rcx-table__cell--header rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-127j9mz"
                          wrap="no-wrap"
                        >
                          Email
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="rcx-box rcx-box--full rcx-table__body"
                  >
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                    <tr
                      class="rcx-box rcx-box--full rcx-table__row"
                    >
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1qvl0ud"
                        >
                          <span
                            class="rcx-skeleton rcx-skeleton--rect rcx-css-1oezft"
                          />
                          <div
                            class="rcx-box rcx-box--full rcx-css-1eminnr"
                          >
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                            <span
                              class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="rcx-box rcx-box--full rcx-table__cell"
                      >
                        <span
                          class="rcx-skeleton rcx-skeleton--text rcx-css-1qcz93u"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoResults without crashing 1`] = `
<body>
  <div>
    <div
      style="height: 100vh; max-height: 300px; display: flex; flex-direction: column; margin-inline: 24px;"
    >
      <form
        class="rcx-box rcx-box--full rcx-css-tma6gt"
      >
        <label
          class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
        >
          <input
            class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box rcx-css-ue04py"
            placeholder="Search..."
            size="1"
            type="text"
          />
          <span
            class="rcx-box rcx-box--full rcx-input-box__addon"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
            >
              
            </i>
          </span>
        </label>
      </form>
      <div
        class="rcx-box rcx-box--full rcx-css-16js560"
      >
        <div
          class="rcx-states"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-states__icon rcx-icon--name-magnifier rcx-icon rcx-css-d884y5"
          >
            
          </i>
          <h3
            class="rcx-states__title"
          >
            No_results_found
          </h3>
        </div>
      </div>
    </div>
  </div>
</body>
`;
